@@ -82,3 +82,6 @@ asm SetSaveSlotSteamCloudFileName "68????????680004000050e8????????8d95";
 // Custom Active item GFX
 asm SetActiveItemGFXPath "508d85????????50e8????????508d8d????????c745??00000000";
 asm SetActiveItemCropOffset "518d45??508d45??508d8d????????e8????????51";
+
+// Custom player hurt sounds
+asm Player_HurtSoundOverride "b837000000f30f1095";
